# wetalk

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  wetalk-test  wetalk-test-android  wetalk-test.c
include/: client.h  server.h  server_cmd.h  user.h  walloc.h  wetalk.h
src/: Makefile  client.c  client_main.c  main.c  server.c  server_main.c  user.c  walloc.c  wetalk  wetalk.c
